# vitally

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  app.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  send_reminders.py  streamlit.py  streamlit_app.py  test.py
.github/workflows/: backend-ci.yml  ci.yml  reminders.yml
backend/: .pre-commit-config.yml  models.py  pyproject.toml  pytest.ini  repo_interface.py  repositories.py  requirements.txt  services.py  settings.py
backend/handlers/: sheets_handler.py
docs/: vitally-contexto.md
frontend/: ui_streamlit.py
src/: db.py  models_sql.py
src/db/: db.py  tables.py
src/handlers/: __init__.py  sheets_handler.py
src/models/: __init__.py  paciente_model.py
src/pages/: __init__.py  edit_pacientes.py  header.py  horarios_fisioterapeutas.py  lista_fisioterapeutas.py  paciente_classes.py  pagamentos.py  proximos_pagamentos.py
src/pages/auth/: login.py
src/pages/fisioterapeuta/: disponibilidade_fisioterapeutas.py
src/pages/matriz/: matriz.py
src/pages/paciente/: add_pacientes.py  edit_pacientes.py  lista_pacientes.py
src/repositories/: __init__.py  agenda_repository_sql.py  fisioterapeuta_repository_sql.py  paciente_aula_repository_sql.py  paciente_repository.py  paciente_repository_sql.py
src/security/: auth.py
src/services/: __init__.py  clinica_service.py
src/utils/: add_utils.py  classes_utils.py  create_user.py  dataframe_utils.py  date_utils.py  paciente_utils.py  send_reminders.py  streamlit_utils.py  time_utils.py  user_utils.py
tests/: conftest.py  test_clinica_service.py  test_db_connection.py  test_models_sql.py  test_paciente_repository_sql.py
