[project]
name = "vitally"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.10",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = "migrations|\\.venv|venv|build|dist|\\.ruff_cache|\\.mypy_cache"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv","venv","build","dist",".ruff_cache",".mypy_cache","migrations"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations",".venv","venv","build","dist",".ruff_cache",".mypy_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = "(^|/)(migrations|\\.venv|venv|build|dist|\\.ruff_cache|\\.mypy_cache)(/|$)"
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*", "app"]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
